@startuml
'https://plantuml.com/class-diagram

class ImportStudentsUI{
}

class AddUserController{
+addUser(username, password, firstName, lastName, email, role, creationDate)

}
class ProfileController{
+createTeacherProfile()
+createStudentProfile()
+createManagerProfile()
+getUserProfile(user)
+getTeacherProfiles()
+getStudentProfiles()
+getManagerProfiles()
}

class ProfileService{
+addNewProfile(profile)
+getProfileFromDatabase(user)
}

class UserManagementService{
+registerNewUser(username, password, firstName, lastName, email, role, creationDate)
}

class PersistenceContext{
+repositories()
}

class RepositoryFactory{
+create()
+newTransactionalContext()
+create(TransactionalContext ctx)
}

database ProfileRepository{
}

database UserRepository{
}

class Profile{
}


class TransactionalContext{
+beginTransaction()
+commit()
}

class ImportStudentsUI{
}

class StudentRegistrationController{
+getCourses()
+addStudentRegistration(final StudentProfile studentProfile, final Status status, final Course course)
+saveStudentRegistration(StudentRegistration studentRegistration)
+getStudentRegistrationsByCourse(Course course)
+getStudentRegistrations()
+getService()
}

class StudentRegistrationService{
+addNewStudentRegistration(StudentRegistration studentRegistration)
+getAll()
+getRepository()
}


class PersistenceContext{
+repositories()
}

class RepositoryFactory{
+create()
+newTransactionalContext()
+create(TransactionalContext ctx)
}

database StudentRegistrationRepository{
}

class TransactionalContext{
+beginTransaction()
+commit()
}

class StudentRegistration{
+setStatus(Status status)
}

ImportStudentsUI --> StudentRegistrationController
StudentRegistrationController-->PersistenceContext
StudentRegistrationController-->TransactionalContext

StudentRegistrationService --> StudentRegistrationRepository
StudentRegistrationController --> StudentRegistration

PersistenceContext-->RepositoryFactory

RepositoryFactory-->StudentRegistrationService


ImportStudentsUI --> AddUserController
ImportStudentsUI --> ProfileController
AddUserController-->PersistenceContext
AddUserController-->TransactionalContext
ProfileController --> Profile
ProfileController-->ProfileService
ProfileService --> ProfileRepository
AddUserController-->UserManagementService
UserManagementService --> UserRepository


PersistenceContext-->RepositoryFactory

RepositoryFactory-->ProfileController
RepositoryFactory-->UserRepository

@enduml